fix bug to restore background, add comments in js file, no backface-visibility

--- a/src/views/css/style.css
+++ b/src/views/css/style.css
@@ -3,6 +3,8 @@
 }*/
 * {
   -webkit-box-sizing: border-box;
+  -webkit-backface-visibility: hidden; /* Chrome, Safari, Opera */
+  backface-visibility: hidden;
   -moz-box-sizing: border-box;
   -box-sizing: border-box;
 }
